--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "graphql": "^16.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.0",
     "react-scripts": "5.0.1",
     "reactflow": "^11.7.0",
     "uuid": "^9.0.0",
