--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@apollo/client": "^3.7.12",
     "@headlessui/react": "^1.7.14",
+    "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -12,6 +13,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.0",
+    "react-redux": "^8.0.5",
     "react-scripts": "5.0.1",
     "reactflow": "^11.7.0",
     "uuid": "^9.0.0",
